<resources>
    <string name="app_name">WhackAMole</string>
    <string name="empty">-</string>
    <string name="time">Time: 00:%1$s</string>
    <string name="bestScore">Best score:</string>
    <string name="play">Play</string>
    <string name="score">Score: %1$s</string>
    <string name="scoreTitle">Score:</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="eazy">Eazy</string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
    <string name="choose_level">Choose level</string>
</resources>